<resources>
    <string name="app_name">PokemonApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pok_dex">Pokédex</string>
    <string name="search">Search</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="sort_by">Sort by:</string>
    <string name="shimmer_999">#999</string>
    <string name="shimmer_pokemon_name">Pokémon Name</string>
    <string name="about">About</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="moves">Moves</string>
    <string name="base_stats">Base Stats</string>
</resources>